--- a/Snacks/Views/Home/Index.cshtml
+++ b/Snacks/Views/Home/Index.cshtml
@@ -1,8 +1,39 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    
+    // SNACK 1
+    string nome = "Dorin";
+    string cognome = "Vieru";
+
+    // SNACK 2
+
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+
+<div class="mt-5">
+    @*Dichiarare una variabile valorizzandola con il nostro nome. Dichiarare un'altra variabile valorizzandola con il nostro cognome. Stampare il nostro nome e cognome all'interno di un tag h2.*@
+    <h1 class="text-success">Snack 1</h1>
+    <h2>@nome @cognome</h2>
+
+    @* Creare una funzione che stampa la somma dei numeri che vanno da 1 a n (con n passato come parametro - n incluso) Stampare dentro uno span il risultato.*@
+    <h1 class="text-success mt-4">Snack 2</h1>
+
+    @*Contare quante volte la lettera a è presente nalla frase "nel mezzo del cammin di nostra vita" e stampare questo valore in pagina.*@
+    <h1 class="text-success mt-4">Snack 3</h1>
+
+    @*Creare una List<int> di 20 numeri interi (generati random da 1 a 90, 1 e 90 inclusi) e mostrare in pagina solo i numeri compresi tra 20 e 70.*@
+    <h1 class="text-success mt-4">Snack 4</h1>
+
+    @*Stampare in pagina la data e l'ora attuale (usando la classe DateTime) con il formato anno-mese-giorno ore:minuti:secondi.*@
+    <h1 class="text-success mt-4">Snack 5</h1>
+
+    @*Partendo dalla data di oggi (usando la classe DateTime) stampare in pagina
+        a. la data di 7 giorni fa
+        b. che giorno della settimana è oggi (il risultato dovrà  essere il nome del giorno (Lunedì, Martedì, ...)
+        c. che giorno della settimana sarà  nello stesso giorno e mese di oggi ma tra un anno (il risultato dovrà  essere il nome del giorno (Lunedì, Martedì, ...)*@
+    <h1 class="text-success mt-4">Snack 6</h1>
 </div>
