--- a/Snacks/Views/Home/Index.cshtml
+++ b/Snacks/Views/Home/Index.cshtml
@@ -15,11 +15,17 @@
         }
         return sum;
     }
-    int n = 77; 
+    int n = 77;
     int sum = AddNum(n);
 
     //SNACK 3
-
+    static int CountLett(string frase, char lettera)
+    {
+        return frase.Count(c => c == lettera);
+    }
+    string frase = "nel mezzo del cammin di nostra vita";
+    char lettera = 'a';
+    int count = CountLett(frase, lettera);
 }
 
 <div class="text-center">
@@ -38,6 +44,7 @@
 
     @*Contare quante volte la lettera a è presente nalla frase "nel mezzo del cammin di nostra vita" e stampare questo valore in pagina.*@
     <h1 class="text-success mt-4">Snack 3</h1>
+    <p>Nella frase <em>"@frase"</em> la lettera <em>"@lettera"</em> viene ripetuta <strong>@count</strong> volte.</p>
 
     @*Creare una List<int> di 20 numeri interi (generati random da 1 a 90, 1 e 90 inclusi) e mostrare in pagina solo i numeri compresi tra 20 e 70.*@
     <h1 class="text-success mt-4">Snack 4</h1>
