--- a/Snacks/Views/Home/Index.cshtml
+++ b/Snacks/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
         }
         return sum;
     }
+
     int n = 77;
     int sum = AddNum(n);
 
@@ -23,9 +24,38 @@
     {
         return frase.Count(c => c == lettera);
     }
+
     string frase = "nel mezzo del cammin di nostra vita";
     char lettera = 'a';
     int count = CountLett(frase, lettera);
+
+    //SNACK 4
+    static List<int> RandomNum(int quantita)
+    {
+        List<int> nums = new List<int>();
+        Random random = new Random();
+        for (int i = 0; i < quantita; i++)
+        {
+            nums.Add(random.Next(1, 91));
+        }
+        return nums;
+    }
+
+    List<int> ShowNums(List<int> nums, int min, int max)
+    {
+        List<int> numeriCompresi = new List<int>();
+        foreach (int num in nums)
+        {
+            if (num >= min && num <= max)
+            {
+                numeriCompresi.Add(num);
+            }
+        }
+        return numeriCompresi;
+    }
+
+    List<int> nums = RandomNum(20);
+    List<int> numeriCompresi = ShowNums(nums, 20, 70);
 }
 
 <div class="text-center">
@@ -48,6 +78,12 @@
 
     @*Creare una List<int> di 20 numeri interi (generati random da 1 a 90, 1 e 90 inclusi) e mostrare in pagina solo i numeri compresi tra 20 e 70.*@
     <h1 class="text-success mt-4">Snack 4</h1>
+    <p>Abbiamo una lista di numeri generati randomicamente:
+        @foreach (var num in numeriCompresi)
+        {
+            <span>@num,</span>
+        }
+    </p>
 
     @*Stampare in pagina la data e l'ora attuale (usando la classe DateTime) con il formato anno-mese-giorno ore:minuti:secondi.*@
     <h1 class="text-success mt-4">Snack 5</h1>
