--- a/la-mia-pizzeria-static/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    Layout = null;
+    Layout = "_PizzeriaLayout";
 
     Pizze margherita = new Pizze("Margherita", "Una nuova pizza fantasmagorica!", "~/img/pizza-margherita.jpg", 8.50);
     Pizze americana = new Pizze("Americana", "La pizza Americana che non ti aspetti e che non vorresti!", "~/img/pizza-americana.jpg", 9.50);
@@ -16,83 +16,27 @@
     pizze.Add(diavola);
     pizze.Add(vegetariana);
     pizze.Add(speckBrie);
-
-    string backHeader = "~/img/sfondo-header.png";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/la_mia_pizzeria_static.styles.css" asp-append-version="true" />
-</head>
-<body>
-    <header style="background-image: url('@Url.Content(backHeader)'); 
-                                                          background-repeat: no-repeat; 
-                                                          background-size: cover; 
-                                                          background-position: center;"
-                                                       ;>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow">
-            <div class="container-fluid">
-                <a asp-area="" asp-controller="Home" asp-action="Index"><img class="w-25" src="~/img/logo-pizza-bomba.png" /></a>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-white fw-bold" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white fw-bold" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+
+
+
+<div class="text-center">
+    <h3 class="fs-1">La pizzeria che ti fa <span class="text-danger">esplodere</span></h3>
+    <div class="row row-cols-1 row-cols-md-3 mt-5">
+        @foreach (var pizza in pizze)
+        {
+            <div class="col-md-4 mb-3">
+                <div class="card h-100 border-success mb-3" style="width: 22rem;">
+                    <img src="@Url.Content(pizza.Img) " class="card-img-top" alt="@pizza.Name">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">@pizza.Name</h5>
+                        <p class="card-text">@pizza.Description</p>
+                        <p class="text-success fw-bold fs-5">€ @pizza.Price.ToString("0.00")</p>
+                        <a href="#" class="btn btn-success mt-auto">Scopri i suoi ingredienti</a>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </header>
-    
-    <div class="container-fluid position-relative" style="background-image: url('@Url.Content("~/img/jumbo-pizza.jpg")'); 
-                                                          height: 550px; 
-                                                          background-repeat: no-repeat; 
-                                                          background-size: cover; 
-                                                          background-position: center;"
-                                                       ;>
-        <div class="overlay"></div>
-        <div class="text-center text-white position-absolute top-50 start-50 translate-middle">
-            <h1 class="fw-bold display-4">Pizze bomba!</h1>
-        </div>
+        }
     </div>
-
-    <div class="container">
-        <main role="main" class="py-4">
-            <div class="text-center">
-                <h3 class="fs-1">La pizzeria che ti fa <span class="text-danger">esplodere</span></h3>
-                <div class="row row-cols-1 row-cols-md-3 mt-5">
-                    @foreach (var pizza in pizze)
-                    {
-                        <div class="col-md-4 mb-3">
-                            <div class="card h-100 border-success mb-3" style="width: 22rem;">
-                                <img src="@Url.Content(pizza.Img) " class="card-img-top" alt="@pizza.Name">
-                                <div class="card-body d-flex flex-column">
-                                    <h5 class="card-title">@pizza.Name</h5>
-                                    <p class="card-text">@pizza.Description</p>
-                                    <p class="text-success fw-bold fs-5">€ @pizza.Price.ToString("0.00")</p>
-                                    <a href="#" class="btn btn-success mt-auto">Scopri i suoi ingredienti</a>
-                                </div>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Pizza Bomba - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-</body>
-</html>
-
+</div>
