UP: Improve css of card, nav-link on header and footer; finish exercise

--- a/la-mia-pizzeria-static/Views/Home/Footer.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Footer.cshtml
@@ -5,7 +5,7 @@
             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
         <div class="col-12 pt-5 d-flex justify-content-center">
-            &copy; 2024 - PizzaBomba s.p.a - La pizza che ti fa esplodere
+            <p class="copy">&copy; 2024 - PizzaBomba s.p.a - La pizza che ti fa esplodere</p>
         </div>
     </div>
 </div>
