--- a/la-mia-pizzeria-static/wwwroot/css/site.css
+++ b/la-mia-pizzeria-static/wwwroot/css/site.css
@@ -28,6 +28,27 @@ header {
 
 li {
     font-size: 20px;
+    transition: border-bottom 0.5s;
+}
+
+.nav-link {
+    position: relative;
+}
+
+.nav-link::before {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: transparent; 
+    transition: background-color 0.3s, bottom 0.3s; 
+}
+
+.nav-link:hover::before {
+    background-color: white;
+    bottom: -4px;
 }
 
 /* JUMBOTRON */
@@ -48,6 +69,16 @@ li {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
+/* MAIN */
+.card {
+    transition: box-shadow 0.5s, transform 0.5s; 
+}
+
+.card:hover {
+    box-shadow: 0px 0px 10px 0px rgba(25, 135, 84, 0.5);
+    transform: scale(1.03); 
+}
+
 /* FOOTER */
 footer {
     background-image: url('../img/sfondo-header-footer.png');
@@ -55,4 +86,9 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    font-size: 18px;
+}
+
+.copy{
+    font-size: 15px;
 }
